update the readme file

--- a/new-pro/config/samples/tutorial_v1_foo.yaml
+++ b/new-pro/config/samples/tutorial_v1_foo.yaml
@@ -15,5 +15,6 @@ subresources:
     specReplicasPath: .spec.replicas
     statusReplicasPath: .status.replicas
 spec:
+    name: jack
     replicas: 2
   # TODO(user): Add fields here
