--- a/config/samples/tutorial_v1_foo.yaml
+++ b/config/samples/tutorial_v1_foo.yaml
@@ -8,6 +8,7 @@ metadata:
     app.kubernetes.io/managed-by: kustomize
     app.kubernetes.io/created-by: new-pro
   name: foo-sample
+  namespace: tnf
 subresources:
   status: {}
   scale:
@@ -16,5 +17,5 @@ subresources:
     statusReplicasPath: .status.replicas
 spec:
     name: jack
-    replicas: 2
+    replicas: 1
   # TODO(user): Add fields here
