--- a/.github/workflows/pre-main.yml
+++ b/.github/workflows/pre-main.yml
@@ -46,7 +46,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: ${{ github.sha }}
-          path: crd-operator-scaling
 
       - name: Check out `cnf-certification-test-partner`
         uses: actions/checkout@v3
@@ -74,27 +73,27 @@ jobs:
       # Deploy the CRD scaling repo 
       - name: Run 'make manifests'
         run: make manifests
-        working-directory: crd-operator-scaling/crd-operator-scaling
+        working-directory: crd-operator-scaling
 
       - name: Run 'make install'
         run: make install
-        working-directory: crd-operator-scaling/crd-operator-scaling
+        working-directory: crd-operator-scaling
 
       - name: Run 'make deploy'
         run: make deploy
-        working-directory: crd-operator-scaling/crd-operator-scaling
+        working-directory: crd-operator-scaling
 
       - name: Wait for the deployment
         run: oc wait deployment new-pro-controller-manager -n tnf --for=condition=available --timeout=240s
-        working-directory: crd-operator-scaling/crd-operator-scaling
+        working-directory: crd-operator-scaling
 
       - name: Run 'make addrole'
         run: make addrole
-        working-directory: crd-operator-scaling/crd-operator-scaling
+        working-directory: crd-operator-scaling
 
       - name: Apply the config/samples
         run: kubectl apply -f config/samples --validate=false
-        working-directory: crd-operator-scaling/crd-operator-scaling
+        working-directory: crd-operator-scaling
 
       # Clone and run the cnf-certification-test repo as a container
       - name: Build the `cnf-certification-test` image
