--- a/.github/workflows/pre-main.yml
+++ b/.github/workflows/pre-main.yml
@@ -40,6 +40,11 @@ jobs:
       PFLT_DOCKERCONFIG: '/home/runner/.docker/config'
 
     steps:
+      - name: Set up Go 1.20
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.20.1
+
       # Clone all of the repos needed.
       # We need the crd-operator-scaling, cnf-certification-test, and cnf-certification-test-partner repos.
       - name: Check out crd-operator-scaling code
