add go download

--- a/.github/workflows/pre-main.yml
+++ b/.github/workflows/pre-main.yml
@@ -76,7 +76,7 @@ jobs:
           working_directory: cnf-certification-test-partner
 
       - name: Run 'add missing go'
-        run: go mod download gopkg.in/check.v1
+        run: sudo go get -t .
 
       # Deploy the CRD scaling repo 
       - name: Run 'make manifests'
