--- a/.github/workflows/pre-main.yml
+++ b/.github/workflows/pre-main.yml
@@ -45,6 +45,9 @@ jobs:
         with:
           go-version: 1.20.1
 
+      - name: Disable default go problem matcher
+        run: echo "::remove-matcher owner=go::"
+
       - name: Write temporary docker file
         run: |
           mkdir -p /home/runner/.docker
