--- a/.github/workflows/pre-main.yml
+++ b/.github/workflows/pre-main.yml
@@ -68,8 +68,9 @@ jobs:
       - name: Check out `cnf-certification-test-partner`
         uses: actions/checkout@v3
         with:
-          repository: test-network-function/cnf-certification-test-partner
+          repository: aabughosh/cnf-certification-test-partner
           path: cnf-certification-test-partner
+          ref: sleep-before-wait
 
       - name: Check out `cnf-certification-test`
         uses: actions/checkout@v3
