--- a/.github/workflows/pre-main.yml
+++ b/.github/workflows/pre-main.yml
@@ -84,6 +84,9 @@ jobs:
       - name: Load local container image into kind nodes so it can be pulled from the operator pod.
         run: kind load docker-image ${OPERATOR_IMAGE_NAME}:${OPERATOR_LOCAL_TEST_IMAGE_TAG} ${OPERATOR_IMAGE_NAME}:${OPERATOR_LOCAL_TEST_IMAGE_TAG}
 
+      - name: Run Make install to install dependencies
+        run: make install
+
       - name: Deploy operator using the local image created in a previous step.
         run: make deploy IMG=${OPERATOR_IMAGE_NAME}:${OPERATOR_LOCAL_TEST_IMAGE_TAG}
 
