add sa to the deployment (#60)
* add sa to the deployment

* add sa to the deployment

* add sa to the deployment

* add debug

* add creating csv

* add creating csv

* add creating csv

* add creating csv with apply

* add creating csv with apply

* add creating csv with apply

* make install to the pre-main

* make install to the pre-main

* make install to the pre-main

* make install to the pre-main

* make install to the pre-main

--- a/.github/workflows/pre-main.yml
+++ b/.github/workflows/pre-main.yml
@@ -92,7 +92,10 @@ jobs:
 
       - name: Show controller's container image
         run: oc get pods -n "${TNF_TEST_NAMESPACE}" -o json | jq '.items[] | .spec.containers[] | select(.name == "manager") | .image'
-
+     
+      - name: Run Make install to install dependencies
+        run: make install
+             
       - name: Create operator cluster role.
         run: make addrole
 
