--- a/.github/workflows/pre-main.yml
+++ b/.github/workflows/pre-main.yml
@@ -44,10 +44,21 @@ jobs:
       PFLT_DOCKERCONFIG: '/home/runner/.docker/config'
 
     steps:
-      - name: Set up Go 1.20
+      - name: Free Disk Space (Ubuntu)
+        uses: edcdavid/free-disk-space@main
+        with:
+          tool-cache: false
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          docker-images: true
+          swap-storage: true
+
+      - name: Set up Go 1.21
         uses: actions/setup-go@v4
         with:
-          go-version: 1.20.7
+          go-version: 1.21.0
 
       - name: Disable default go problem matcher
         run: echo "::remove-matcher owner=go::"
